WICKET-6563 adjustments