@@ -16,22 +16,44 @@
  */
 package org.wicketstuff.datastores.ignite;
 
-import org.apache.wicket.pageStore.IDataStore;
-import org.apache.wicket.util.lang.Args;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
+import org.apache.ignite.DataRegionMetrics;
 import org.apache.ignite.Ignite;
 import org.apache.ignite.IgniteCache;
 import org.apache.ignite.IgniteException;
+import org.apache.ignite.binary.BinaryObjectException;
+import org.apache.ignite.binary.BinaryReader;
+import org.apache.ignite.binary.BinaryWriter;
+import org.apache.ignite.binary.Binarylizable;
+import org.apache.wicket.WicketRuntimeException;
+import org.apache.wicket.page.IManageablePage;
+import org.apache.wicket.pageStore.AbstractPersistentPageStore;
+import org.apache.wicket.pageStore.IPersistedPage;
+import org.apache.wicket.pageStore.IPersistentPageStore;
+import org.apache.wicket.pageStore.SerializedPage;
+import org.apache.wicket.util.lang.Args;
+import org.apache.wicket.util.lang.Bytes;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * An IDataStore implementation that saves serialized pages in Apache Ignite
- *
+ * <p>
+ * Ignite is not compatible with Java 9 - the following JVM parameters must be used:
+ * <pre>
+ * --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
+ * --add-exports=java.base/sun.nio.ch=ALL-UNNAMED 
+ * </pre>
+ * 
+ * @see https://stackoverflow.com/questions/50639471/using-ignite-on-jdk-9
+ * 
  * @author Alexey Prudnikov
  */
-public class IgniteDataStore implements IDataStore
-{
+public class IgniteDataStore extends AbstractPersistentPageStore  implements IPersistentPageStore {
 	private static final Logger LOGGER = LoggerFactory.getLogger(IgniteDataStore.class);
 
 	/**
@@ -42,106 +64,152 @@ public class IgniteDataStore implements IDataStore
 	/**
 	 * Constructor
 	 *
-	 * @param ignite     The Apache Ignite instance
+	 * @param ignite The Apache Ignite instance
 	 */
-	public IgniteDataStore(Ignite ignite)
-	{
+	public IgniteDataStore(String applicatioName, Ignite ignite) {
+		super(applicatioName);
+
 		this.ignite = Args.notNull(ignite, "ignite");
 	}
 
 	/**
 	 * Returns (and creates if needed) named cache from Ignite instance
 	 *
-	 * @param cacheName     Cache name
+	 * @param cacheName Cache name
 	 */
-	private IgniteCache<Integer, byte[]> getIgniteCache(String cacheName)
-	{
+	private IgniteCache<Integer, BinarylizableWrapper> getIgniteCache(String cacheName) {
 		return ignite.getOrCreateCache(cacheName);
 	}
 
 	@Override
-	public byte[] getData(String sessionId, int pageId)
-	{
-		byte[] bytes = null;
-		IgniteCache<Integer, byte[]> cache = getIgniteCache(sessionId);
-		if (cache != null)
-		{
-			bytes = cache.get(pageId);
-		}
+	protected IManageablePage getPersistedPage(String sessionIdentifier, int id) {
+		IgniteCache<Integer, BinarylizableWrapper> cache = getIgniteCache(sessionIdentifier);
+		if (cache != null) {
+			BinarylizableWrapper wrapper = cache.get(id);
 
-		if (LOGGER.isDebugEnabled())
-		{
-			LOGGER.debug("Got {} for session '{}' and page id '{}'",
-				bytes != null ? "data" : "'null'", sessionId, pageId
-			);
-		}
+			if (LOGGER.isDebugEnabled()) {
+				LOGGER.debug("Got {} for session '{}' and page id '{}'", wrapper, sessionIdentifier, id);
+			}
 
-		return bytes;
-	}
-
-	@Override
-	public void removeData(String sessionId, int pageId)
-	{
-		IgniteCache<Integer, byte[]> cache = getIgniteCache(sessionId);
-		if (cache != null && cache.remove(pageId) && LOGGER.isDebugEnabled())
-		{
-			LOGGER.debug("Deleted data for session '{}' and page with id '{}'", sessionId, pageId);
-		}
-	}
-
-	@Override
-	public void removeData(String sessionId)
-	{
-		IgniteCache<Integer, byte[]> cache = getIgniteCache(sessionId);
-		if (cache != null)
-		{
-			cache.destroy();
-			if (LOGGER.isDebugEnabled())
-			{
-				LOGGER.debug("Deleted data for session '{}'", sessionId);
+			if (wrapper != null) {
+				return wrapper.page;
 			}
 		}
+
+		return null;
 	}
 
 	@Override
-	public void storeData(String sessionId, int pageId, byte[] data)
-	{
-		IgniteCache<Integer, byte[]> cache = getIgniteCache(sessionId);
-		if (cache != null)
-		{
-			cache.put(pageId, data);
-			if (LOGGER.isDebugEnabled())
-			{
-				LOGGER.debug("Inserted data for session '{}' and page id '{}'", sessionId, pageId);
-			}
+	protected void removePersistedPage(String sessionIdentifier, IManageablePage page) {
+		IgniteCache<Integer, BinarylizableWrapper> cache = getIgniteCache(sessionIdentifier);
+		if (cache != null) {
+			cache.remove(page.getPageId());
+			LOGGER.debug("Deleted page for session '{}' and page with id '{}'", sessionIdentifier,
+					page.getPageId());
 		}
 	}
 
 	@Override
-	public void destroy()
-	{
-		if (ignite != null)
-		{
-			try
-			{
+	protected void removeAllPersistedPages(String identifier) {
+		IgniteCache<Integer, BinarylizableWrapper> cache = getIgniteCache(identifier);
+		if (cache != null) {
+			cache.clear();
+			LOGGER.debug("Deleted page for session '{}'", identifier);
+		}
+	}
+
+	@Override
+	protected void addPersistedPage(String identifier, IManageablePage page) {
+		if (page instanceof SerializedPage == false) {
+			throw new WicketRuntimeException("CassandraDataStore works with serialized pages only");
+		}
+		SerializedPage serializedPage = (SerializedPage) page;
+
+		IgniteCache<Integer, BinarylizableWrapper> cache = getIgniteCache(identifier);
+		cache.put(page.getPageId(), new BinarylizableWrapper(serializedPage));
+		LOGGER.debug("Inserted page for session '{}' and page id '{}'", identifier, page.getPageId());
+	}
+
+	@Override
+	public void destroy() {
+		if (ignite != null) {
+			try {
 				ignite.close();
-			}
-			catch (IgniteException e)
-			{
+			} catch (IgniteException e) {
 				LOGGER.error("Can't close ignite instance", e);
 			}
 		}
 	}
 
 	@Override
-	public boolean isReplicated()
-	{
+	public boolean supportsVersioning() {
 		return true;
 	}
 
 	@Override
-	public boolean canBeAsynchronous()
-	{
-		return true;
+	public Set<String> getSessionIdentifiers() {
+		return new HashSet<>(ignite.cacheNames());
+	}
+
+	@Override
+	public List<IPersistedPage> getPersistedPages(String contextIdentifier) {
+		List<IPersistedPage> pages = new ArrayList<>();
+
+		IgniteCache<Integer, BinarylizableWrapper> cache = getIgniteCache(contextIdentifier);
+		if (cache != null) {
+			cache.forEach(entry -> {
+				SerializedPage serializedPage = entry.getValue().page;
+				pages.add(new PersistedPage(serializedPage.getPageId(), serializedPage.getPageType(),
+						serializedPage.getData().length));
+			});
+		}
+
+		return pages;
+	}
+
+	@Override
+	public Bytes getTotalSize() {
+		long bytes = 0;
+
+		for (DataRegionMetrics metrics : ignite.dataRegionMetrics()) {
+			bytes += metrics.getTotalAllocatedSize();
+		}
+		
+		return Bytes.bytes(bytes);
+	}
+
+	/**
+	 * A wrapper around a {@link SerializedPage} that implements Ignite's
+	 * {@link Binarylizable} for performance.
+	 * 
+	 * @author sven
+	 */
+	private static final class BinarylizableWrapper implements Binarylizable {
+
+		private static final String DATA = "data";
+		private static final String TYPE = "type";
+		private static final String ID = "id";
+		public SerializedPage page;
+
+		public BinarylizableWrapper(SerializedPage page) {
+			this.page = page;
+		}
+
+		@Override
+		public String toString() {
+			return page.toString();
+		}
+
+		@Override
+		public void writeBinary(BinaryWriter writer) throws BinaryObjectException {
+			writer.writeInt(ID, page.getPageId());
+			writer.writeString(TYPE, page.getPageType());
+			writer.writeByteArray(DATA, page.getData());
+		}
+
+		@Override
+		public void readBinary(BinaryReader reader) throws BinaryObjectException {
+			page = new SerializedPage(reader.readInt(ID), reader.readString(TYPE), reader.readByteArray(DATA));
+		}
 	}
 }
